# filen-relay

./: README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
filen-relay/: .gitignore  Cargo.toml  Dockerfile  tailwind.css
filen-relay-deployer/: Cargo.toml
filen-relay-deployer/src/: main.rs  scaleway_api.rs
filen-relay-deployer/src/scaleway/: mod.rs  scaleway_api.rs
filen-relay/src/: api.rs  common.rs  main.rs  util.rs
filen-relay/src/backend/: auth.rs  db.rs  mod.rs  rclone_auth_proxy.rs  server_manager.rs
filen-relay/src/components/: mod.rs
filen-relay/src/frontend/: manage_allowed_users.rs  mod.rs  servers.rs  shares.rs  update_checker.rs
