[package]
name = "filen-relay"
version = "0.1.4"
authors = ["JupiterPi <hello@jupiterpi.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
rusqlite = { version = "0.38.0", features = ["bundled"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
filen-sdk-rs = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "e328518b37ba6a364696f39b844c6f5ff27ffdbd", optional = true }
filen-rclone-wrapper = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "e328518b37ba6a364696f39b844c6f5ff27ffdbd", optional = true }
filen-types = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "e328518b37ba6a364696f39b844c6f5ff27ffdbd", optional = true }
filen-cli = { git = "https://github.com/FilenCloudDienste/filen-rs", rev = "e328518b37ba6a364696f39b844c6f5ff27ffdbd", optional = true }
uuid = { version = "1.20.0", features = ["v4", "js"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["macros"], optional = true }
port_check = { version = "0.3.0", optional = true }
chrono = { version = "0.4.43", features = ["serde"], optional = true }
clap = { version = "4.5.56", features = ["derive", "env"], optional = true }
axum-reverse-proxy = { version = "1.1.1", features = [
	"native-tls",
], optional = true }
wasm-cookies = "=0.2.1"
serde_json = { version = "1.0.149" }
base64 = { version = "0.22.1", optional = true }
http = { version = "1.4.0", optional = true }
axum-core = { version = "0.5.6", optional = true }
rand = { version = "0.10.0", optional = true }
ftail = { version = "0.3.1", optional = true }
log = { version = "0.4.29", optional = true }
tempfile = { version = "3.27.0", optional = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false, features = [
	"router",
] }
tower-sessions = { version = "0.15.0", optional = true }

[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = [
	"dioxus/server",
	"rusqlite",
	"filen-sdk-rs",
	"filen-rclone-wrapper",
	"filen-types",
	"tokio",
	"port_check",
	"chrono",
	"clap",
	"axum-reverse-proxy",
	"filen-cli",
	"rand",
	"base64",
	"http",
	"axum-core",
	"ftail",
	"log",
	"tempfile",
	"tower-sessions",
]
